Fix configuration after upgrade to Windows 10

--- a/chartacaeli/caa/Makefile
+++ b/chartacaeli/caa/Makefile
@@ -65,9 +65,10 @@ ifdef winos
 
 $(CAADLL): $(AADLL) $(CAADLLOBJ)
 	$(CXX) -Wall -shared \
-	-static-libgcc -static-libstdc++ \
 	-o $@ $(CAADLLOBJ) \
-	-L. -l$(DST)
+	-L. -l$(DST) \
+	-static-libgcc -static-libstdc++ -Wl,-Bstatic -lstdc++ -lpthread -Wl,-Bdynamic
+	
 else
 .cpp.o:
 	$(CXX) -Wall -shared -fPIC -c $< -o $@
