Fix Xonomy.duplicateElement and Xononmy.focus issues

--- a/w3/Makefile
+++ b/w3/Makefile
@@ -10,24 +10,22 @@ else
 sep := :
 endif
 
-all: lib/jquery-1.10.2.min.js lib/xonomy-3.5.0/xonomy.js
+all: lib/jquery-1.10.2.min.js lib/xonomy/xonomy.js
 
 clean:
 
 # local clean
 lclean: clean
-	rm -rf lib/xonomy-3.5.0
+	rm -rf lib/xonomy
 
 # real clean
 rclean: lclean
-	rm -f xonomy.zip
 	rm -f lib/jquery-1.10.2.min.js
 
 tidy: rclean
 
 lib/jquery-1.10.2.min.js:
 	wget -q -O $@ https://code.jquery.com/$(@F)
-xonomy.zip:
-	wget -q http://www.lexiconista.com/Xonomy/xonomy.zip
-lib/xonomy-3.5.0/xonomy.js: xonomy.zip
-	unzip -uo $< -d lib
+lib/xonomy/xonomy.js:
+	(cd lib ; git clone https://github.com/michmech/xonomy.git)
+	(cd $(@D) ; git checkout 810057e13c671728d236f85579296188e93a9fb3)
