Add support for supplementary catalog files

--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -855,6 +855,8 @@ chartacaeli.CatalogADC7118Record.substitute.size                   = size
 chartacaeli.CatalogADC7118Record.substitute.mag                    = mag
 chartacaeli.CatalogADC7118Record.substitute.n_mag                  = n_mag
 chartacaeli.CatalogADC7118Record.substitute.Desc                   = Desc
+# names.dat
+chartacaeli.CatalogADC7118Record.substitute.CName                  = CName
 
 chartacaeli.CatalogADC7118Record.message.ereclen                   = {0} character per per entry expected.
 chartacaeli.CatalogADC7118Record.message.erecval                   = {0} mismatched expected pattern {1}.
