Add unrecorverable error log message

--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -1,5 +1,7 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} invalid
 
+chartacaeli.ChartaCaeli.message.severr                             = unrecoverable error
+
 chartacaeli.Configuration.message.default                          = default value {0}.
 
 chartacaeli.Coordinate.substitute.x                                = X
