--- a/logging.properties
+++ b/logging.properties
@@ -1,4 +1,4 @@
-# log-level usage
+# log level usage
 # SEVERE:	no chance to continue, thus terminate app.
 # WARNING:	perhaps strange behaviour, give it a chance.
 # INFO:		verbose mode.
