--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -1,6 +1,7 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} invalid
 
-chartacaeli.ChartaCaeli.message.severr                             = unrecoverable error
+java.lang.Object.message.severr                                    = unrecoverable error
+# chartacaeli.ChartaCaeli.message.severr                             = unrecoverable error
 
 chartacaeli.Configuration.message.default                          = default value {0}.
 
