Add log output in case of PS viewer failure

--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -1,7 +1,10 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} invalid
 
-java.lang.Object.message.severr                                    = unrecoverable error
-# chartacaeli.ChartaCaeli.message.severr                             = unrecoverable error
+java.lang.Object.message.eunrec                                    = unrecoverable error.
+java.lang.Object.message.erunext                                   = failed to start external program {0}.
+
+# chartacaeli.ChartaCaeli.message.eunrec                             = unrecoverable error.
+chartacaeli.ChartaCaeli.message.erunext                            = failed to start Postscript viewer {0}.
 
 chartacaeli.Configuration.message.default                          = default value {0}.
 
