--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -1,10 +1,13 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} invalid
 
 java.lang.Object.message.eunrec                                    = unrecoverable error.
-java.lang.Object.message.erunext                                   = failed to start external program {0}.
+java.lang.Object.message.erunext                                   = failed to start system program {0}.
+java.lang.Object.message.ewfile                                    = failed to write file {0}.
 
 # chartacaeli.ChartaCaeli.message.eunrec                             = unrecoverable error.
 chartacaeli.ChartaCaeli.message.erunext                            = failed to start Postscript viewer {0}.
+# chartacaeli.Artwork.message.ewfile                                 = failed to write file {0}.
+chartacaeli.Artwork.message.efltfmt                                = resolution mismatch after mapfilter.
 
 chartacaeli.Configuration.message.default                          = default value {0}.
 
