--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -47,7 +47,7 @@ chartacaeli.CAADate.message.nameofweekdayshort.sat                 = Sa
 
 chartacaeli.CAADate.message.nameofmonth.jan                        = January
 chartacaeli.CAADate.message.nameofmonth.feb                        = February
-chartacaeli.CAADate.message.nameofmonth.mar                        = Match
+chartacaeli.CAADate.message.nameofmonth.mar                        = March
 chartacaeli.CAADate.message.nameofmonth.apr                        = April
 chartacaeli.CAADate.message.nameofmonth.may                        = May
 chartacaeli.CAADate.message.nameofmonth.jun                        = June
