--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -76,6 +76,11 @@ chartacaeli.DialDeg.substitute.angle.deg                           = scaledeg
 chartacaeli.DialDeg.substitute.angle.min                           = scaledegmin
 chartacaeli.DialDeg.substitute.angle.sec                           = scaledegsec
 chartacaeli.DialDeg.substitute.angle.frc                           = scaledegfrc
+chartacaeli.DialDeg.substitute.mark.neg                            = markdedegneg
+chartacaeli.DialDeg.substitute.mark.deg                            = markdedeg
+chartacaeli.DialDeg.substitute.mark.min                            = markdedegmin
+chartacaeli.DialDeg.substitute.mark.sec                            = markdedegsec
+chartacaeli.DialDeg.substitute.mark.frc                            = markdedegfrc
 
 chartacaeli.DialDay.substitute.day                                 = julianday
 chartacaeli.DialDay.substitute.day.YYYY                            = Y
