--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -8,6 +8,13 @@ java.lang.Object.message.ewfile                                    = failed to w
 chartacaeli.ChartaCaeli.message.erunext                            = failed to start Postscript viewer {0}.
 # chartacaeli.Artwork.message.ewfile                                 = failed to write file {0}.
 chartacaeli.Artwork.message.efltfmt                                = resolution mismatch after mapfilter.
+chartacaeli.Artwork.message.tasktime                               = {0}.main() took {1} msec.
+
+chartacaeli.Artwork$PJ2TextureMapperGpu.message.cudastat           = {0} MB CPU/GPU transfers took {1} msec. {2} CUDA threads took {3} msec.
+
+chartacaeli.FieldOfView.message.eupdate                            = cannot update existing {0} with {1}.
+chartacaeli.FieldOfView.message.enumint                            = {0} wrong number of intersections.
+chartacaeli.FieldOfView.message.update                             = using case {0}.
 
 chartacaeli.Configuration.message.default                          = default value {0}.
 
@@ -123,8 +130,10 @@ chartacaeli.CircleMeridian.substitute.azimuth.deg                  = azimuthhrs
 chartacaeli.CircleMeridian.substitute.azimuth.min                  = azimuthhrsmin
 chartacaeli.CircleMeridian.substitute.azimuth.sec                  = azimuthhrssec
 chartacaeli.CircleMeridian.substitute.azimuth.frc                  = azimuthhrsfrc
-chartacaeli.CircleMeridian.substitute.terminus.x                   = terminusX
-chartacaeli.CircleMeridian.substitute.terminus.y                   = terminusY
+chartacaeli.CircleMeridian.substitute.alphaxy.x                    = alphaX
+chartacaeli.CircleMeridian.substitute.alphaxy.y                    = alphaY
+chartacaeli.CircleMeridian.substitute.omegaxy.x                    = omegaX
+chartacaeli.CircleMeridian.substitute.omegaxy.y                    = omegaY
 
 chartacaeli.CircleMeridian.message.eintsec                         = intersection with {0} failed.
 
@@ -133,8 +142,10 @@ chartacaeli.CircleParallel.substitute.altitude.deg                 = altitudedeg
 chartacaeli.CircleParallel.substitute.altitude.min                 = altitudedegmin
 chartacaeli.CircleParallel.substitute.altitude.sec                 = altitudedegsec
 chartacaeli.CircleParallel.substitute.altitude.frc                 = altitudedegfrc
-chartacaeli.CircleParallel.substitute.terminus.x                   = terminusX
-chartacaeli.CircleParallel.substitute.terminus.y                   = terminusY
+chartacaeli.CircleParallel.substitute.alphaxy.x                    = alphaX
+chartacaeli.CircleParallel.substitute.alphaxy.y                    = alphaY
+chartacaeli.CircleParallel.substitute.omegaxy.x                    = omegaX
+chartacaeli.CircleParallel.substitute.omegaxy.y                    = omegaY
 
 chartacaeli.CircleParallel.message.eintsec                         = intersection with {0} failed.
 
@@ -896,7 +907,3 @@ chartacaeli.CatalogADC7237Record.substitute.ANames                 = ANames
 
 chartacaeli.CatalogADC7237Record.message.ereclen                   = {0} character per per entry expected.
 chartacaeli.CatalogADC7237Record.message.erecval                   = {0} mismatched expected pattern {1}.
-
-chartacaeli.Artwork.message.tasktime                               = {0}.main() took {1} msec.
-
-chartacaeli.Artwork$PJ2TextureMapperGpu.message.cudastat           = {0} MB CPU/GPU transfers took {1} msec. {2} CUDA threads took {3} msec.
