--- a/logging.properties
+++ b/logging.properties
@@ -29,4 +29,5 @@ java.util.logging.SimpleFormatter.format = %1$tc %2$s : %4$s : %5$s%n
 # chartacaeli.CircleMeridian
 # chartacaeli.CircleParallel
 # chartacaeli.Configuration
+# chartacaeli.FieldOfView
 # chartacaeli.UnicodePostscriptStream
