--- a/logging.properties
+++ b/logging.properties
@@ -14,20 +14,23 @@ java.util.logging.SimpleFormatter.format = %1$tc %2$s : %4$s : %5$s%n
 
 # specific settings
 
-# chartacaeli.AnnotationStraight
-# chartacaeli.ApplicationResource
-# chartacaeli.Artwork
-# chartacaeli.CatalogADC1239H
-# chartacaeli.CatalogADC1239T
-# chartacaeli.CatalogADC5050
-# chartacaeli.CatalogADC5109
-# chartacaeli.CatalogADC6049
-# chartacaeli.CatalogADC7118
-# chartacaeli.CatalogADC7237
-# chartacaeli.CatalogDS9
-# chartacaeli.ChartaCaeli
-# chartacaeli.CircleMeridian
-# chartacaeli.CircleParallel
-# chartacaeli.Configuration
-# chartacaeli.FieldOfView
-# chartacaeli.UnicodePostscriptStream
+# chartacaeli.AnnotationStraight.java
+# chartacaeli.ApplicationResource.java
+# chartacaeli.Artwork.java
+# chartacaeli.Artwork$PJ2TextureMapperGpu
+# chartacaeli.CatalogADC1239H.java
+# chartacaeli.CatalogADC1239T.java
+# chartacaeli.CatalogADC5050.java
+# chartacaeli.CatalogADC5109.java
+# chartacaeli.CatalogADC6049.java
+# chartacaeli.CatalogADC7118.java
+# chartacaeli.CatalogADC7237.java
+# chartacaeli.CatalogDS9.java
+# chartacaeli.ChartaCaeli.java
+# chartacaeli.CircleMeridian.java
+# chartacaeli.CircleParallel.java
+# chartacaeli.Configuration.java
+# chartacaeli.DialDeg.java
+# chartacaeli.FieldOfView.java
+# chartacaeli.HorizonType.java
+# chartacaeli.UnicodePostscriptStream.java
