--- a/chartacaeli.properties
+++ b/chartacaeli.properties
@@ -3,6 +3,7 @@ chartacaeli.ParameterNotValidError.message.subject                 = {0} invalid
 java.lang.Object.message.eunrec                                    = unrecoverable error.
 java.lang.Object.message.erunext                                   = failed to start system program {0}.
 java.lang.Object.message.ewfile                                    = failed to write file {0}.
+java.lang.Object.message.enoreg                                    = no such registry object.
 
 # chartacaeli.ChartaCaeli.message.eunrec                             = unrecoverable error.
 chartacaeli.ChartaCaeli.message.erunext                            = failed to start Postscript viewer {0}.
