--- a/w3/Makefile
+++ b/w3/Makefile
@@ -22,20 +22,9 @@ PNG = general-features-selection.png \
 	artistic-star-chart--toppage.png \
 	artistic-star-chart--artwork.png
 
-PNGCRP = general-features-selectionCRP.png \
-	scientific-star-chartCRP.png \
-	artistic-star-chartCRP.png \
-	artistic-star-chart--toppageCRP.png \
-	artistic-star-chart--artworkCRP.png
-
-PNGCOL = general-features-selectionCOL.png \
-	scientific-star-chartCOL.png \
-	artistic-star-chartCOL.png
-
-
 .SUFFIXES: .xml .pdf .png
 
-.PHONY: all clean lclean rclean tidy pdf png pngcrp pngcol
+.PHONY: all clean lclean rclean tidy pdf png
 
 vpath %.xml lab
 vpath %.preferences lab
@@ -45,16 +34,14 @@ vpath %.preferences lab
 	@test -f ../$@ && mv ../$@ .
 
 .pdf.png:
-	$${GS:-gs} -q -o $@ -sDEVICE=pngalpha -sPAPERSIZE=a2 -dFIXEDMEDIA -dPDFFitPage -dCompatibilityLevel=1.4 $<
+	$${GS:-gs} -q -o - -sDEVICE=pngalpha -sPAPERSIZE=a2 -dFIXEDMEDIA -dPDFFitPage -dCompatibilityLevel=1.4 $< |\
+	magick convert $< -background "rgb(255,255,255)" -flatten $@
 
-all: lib/xonomy pdf png pngcrp pngcol
+all: lib/xonomy pdf png
 
 pdf: $(PDF)
 
 png: $(PNG)
-
-pngcrp: $(PNGCRP)
-pngcol: $(PNGCOL)
 
 %.pdf: %.preferences lib/Justv2.ttf lib/Justv22.ttf
 artistic-star-chart.pdf: artistic-star-chart--toppage.pdf artistic-star-chart--artwork.pdf
@@ -62,13 +49,8 @@ artistic-star-chart.pdf: artistic-star-chart--toppage.pdf artistic-star-chart--a
 
 $(PNG):
 
-$(PNGCRP): %CRP.png : %.png
-	magick convert $< -crop 1191x670+0+100 $@
-$(PNGCOL): %COL.png : %.png
-	magick convert $< -background "rgb(255,255,255)" -flatten $@
-
 clean:
-	rm -f $(PDF) $(PNG) $(PNGCRP) $(PNGCOL)
+	rm -f $(PDF) $(PNG)
 
 # local clean
 lclean: clean
