--- a/logging.properties
+++ b/logging.properties
@@ -18,8 +18,7 @@ java.util.logging.SimpleFormatter.format = %1$tc %2$s : %4$s : %5$s%n
 # chartacaeli.AnnotationStraight
 # chartacaeli.ApplicationResource
 # chartacaeli.Artwork
-# chartacaeli.Artwork$PJ2TextureMapperGpu
-chartacaeli.Artwork$PJ2TextureMapperGpu.level = INFO
+chartacaeli.Artwork = INFO
 # chartacaeli.CatalogADC1239H
 # chartacaeli.CatalogADC1239T
 # chartacaeli.CatalogADC5050
