--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="chartacaeli/caa/src/|chartacaeli/chartacaeli/gpu/*|chartacaeli/chartacaeli/gpu/src/|lab/|lib/" including="chartacaeli/" kind="src" path="">
+	<classpathentry excluding="chartacaeli/caa/src/|chartacaeli/chartacaeli/gpu/tst|lab/|lib/" including="chartacaeli/" kind="src" path="">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="chartacaeli/caa"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/runcc.jar"/>
 	<classpathentry kind="lib" path="lib/castor-core-1.3.3.jar"/>
