Improve stream buffer handling

--- a/logging.properties
+++ b/logging.properties
@@ -18,7 +18,7 @@ java.util.logging.SimpleFormatter.format = %1$tc %2$s : %4$s : %5$s%n
 # chartacaeli.AnnotationStraight
 # chartacaeli.ApplicationResource
 # chartacaeli.Artwork
-chartacaeli.Artwork = INFO
+chartacaeli.Artwork.level = INFO
 # chartacaeli.CatalogADC1239H
 # chartacaeli.CatalogADC1239T
 # chartacaeli.CatalogADC5050
