Add carousel-item image pre-processing

--- a/w3/Makefile
+++ b/w3/Makefile
@@ -22,9 +22,15 @@ PNG = general-features-selection.png \
 	artistic-star-chart--toppage.png \
 	artistic-star-chart--artwork.png
 
+GNG = ccGallery_general-features-selection.png \
+	ccGallery_scientific-star-chart.png \
+	ccGallery_artistic-star-chart.png \
+	ccGallery_artistic-star-chart--toppage.png \
+	ccGallery_artistic-star-chart--artwork.png
+
 .SUFFIXES: .xml .pdf .png
 
-.PHONY: all clean lclean rclean tidy pdf png
+.PHONY: all clean lclean rclean tidy pdf png gng
 
 vpath %.xml lab
 vpath %.preferences lab
@@ -37,20 +43,26 @@ vpath %.preferences lab
 	$${GS:-gs} -q -o - -r150 -sDEVICE=pngalpha -sPAPERSIZE=a2 -dFIXEDMEDIA -dPDFFitPage -dCompatibilityLevel=1.4 $< |\
 	magick convert png:- -background "rgb(255,255,255)" -flatten $@
 
-all: lib/xonomy pdf png
+all: lib/xonomy pdf png gng
 
 pdf: $(PDF)
 
 png: $(PNG)
+
+gng: $(GNG)
+
+ccGallery_%.png: %.png
+	magick convert $< -crop x1395+0+512 $@
 
 %.pdf: %.preferences lib/Justv2.ttf lib/Justv22.ttf
 artistic-star-chart.pdf: artistic-star-chart--toppage.pdf artistic-star-chart--artwork.pdf
 	pdftk $< background artistic-star-chart--artwork.pdf output $@
 
 $(PNG):
+$(GNG):
 
 clean:
-	rm -f $(PDF) $(PNG)
+	rm -f $(PDF) $(PNG) $(GNG)
 
 # local clean
 lclean: clean
