Save some tweaks

--- a/.gitignore
+++ b/.gitignore
@@ -19,18 +19,18 @@ org/chartacaeli/gpu/tst/**
 !org/chartacaeli/gpu/tst/P4Projector.java
 !org/chartacaeli/gpu/tst/RandomDataset.java
 org/chartacaeli/model/
-azimuthal-projection.pdf
-azimuthal-projection.png
-field-of-view.pdf
-field-of-view.png
-layout-and-text.pdf
-layout-and-text.png
-milkyway-with-catalogds9.pdf
-milkyway-with-catalogds9.png
-unicode-and-fonts.pdf
-unicode-and-fonts.png
-variables-and-expressions.pdf
-variables-and-expressions.png
+/azimuthal-projection.pdf
+/azimuthal-projection.png
+/field-of-view.pdf
+/field-of-view.png
+/layout-and-text.pdf
+/layout-and-text.png
+/milkyway-with-catalogds9.pdf
+/milkyway-with-catalogds9.png
+/unicode-and-fonts.pdf
+/unicode-and-fonts.png
+/variables-and-expressions.pdf
+/variables-and-expressions.png
 *.class
 *.cubin
 *.d
