--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="org/chartacaeli/caa/src/|org/chartacaeli/gpu/tst|lab/|lib/" including="org/chartacaeli/" kind="src" path="">
+	<classpathentry excluding="lab/|lib/|org/chartacaeli/caa/src/|org/chartacaeli/gpu/tst/" including="org/chartacaeli/" kind="src" path="">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="org/chartacaeli/caa"/>
 		</attributes>
